--- a/design.css
+++ b/design.css
@@ -18,7 +18,7 @@ body{
 
 /*Full width input fields*/
 input[type=text], input[type=password], input[type=email] {
-	width :100%;
+	width :50%;
 	padding: 15px;
 	margin: 5px 0 22px 0;
 	border-radius: 25px;
@@ -59,6 +59,24 @@ hr{
 
 .signin{
 	text-align: center;
+}
+
+.otpbutton{
+	text-align: center;
+	background-color: #130e0e;
+	color: white;
+	padding: 16px 20px;
+	border: none;
+	margin: 0 auto;
+	cursor: pointer;
+	opacity: 0.9;
+	border-radius: 25px;
+	border: 2px solid white;
+	width: 25%;
+}
+
+.otpbutton:hover{
+	opacity: 1
 }
 
 /* Add a blue text color to links */
